--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://oaktech:Phantom123%24@cluster0.qxfncdq.mongodb.net/vaultDB?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourSecretKey
 
 # Gmail credentials for Nodemailer
