--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 MONGO_URI=mongodb+srv://oaktech:Phantom123%24@cluster0.qxfncdq.mongodb.net/VaultDB?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=yourSecretKey
 
-RESEND_API_KEY=re_YNSUQKt3_9sUvgMuKSv8BW26oS9YnZKAR
-EMAIL_FROM=no-reply@VoltaBancaditalia.com
+SMTP_HOST=mail.voltabancaditalia.com
+SMTP_PORT=465
+SMTP_USER=no-reply@voltabancaditalia.com
+SMTP_PASS=fkmodbprrugchznd
+EMAIL_FROM="Vault Bank <no-reply@voltabancaditalia.com>"
