--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET=yourSecretKey
 
 EMAIL_USER=voltabancaditalia@gmail.com
 EMAIL_PASS=hsqiekjtgabcrvsq
+FRONTEND_URL=https://voltabancaditalia.vercel.app
