--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ JWT_SECRET=yourSecretKey
 
 EMAIL_USER=voltabancaditalia@gmail.com
 EMAIL_PASS=hsqiekjtgabcrvsq
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
 FRONTEND_URL=https://voltabancaditalia.vercel.app
