--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ MONGO_URI=mongodb+srv://oaktech:Phantom123%24@cluster0.qxfncdq.mongodb.net/Vault
 JWT_SECRET=yourSecretKey
 
 RESEND_API_KEY=re_544ocPgT_MsCFHcvAZmf9Ydbf55ViSZgV
+EMAIL_FROM=no-reply@voltabancaditalia.com
 FRONTEND_URL=https://voltabancaditalia.vercel.app
