--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ JWT_SECRET=yourSecretKey
 
 RESEND_API_KEY=re_544ocPgT_MsCFHcvAZmf9Ydbf55ViSZgV
 EMAIL_FROM=no-reply@voltabancaditalia.com
-FRONTEND_URL=https://voltabancaditalia.vercel.app
+FRONTEND_URL=https://voltabancaditalia.com
